--- a/Views/Admin/AddOrUpdateRecipe.cshtml
+++ b/Views/Admin/AddOrUpdateRecipe.cshtml
@@ -166,7 +166,6 @@
                                     <div><img src="/@item"><button type="button">x</button></div>
                                 }
                             }
-
                         </div>
                        @* <div class="row">
                             <div class=" col-md-4 col-sm-6">
@@ -228,7 +227,7 @@
                                                         <input type="text" class="form-control quantity" placeholder="Enter quantity and unit" name="quantity" value="@item.Quantity">
                                                     </div>
                                                     <div class="col-md-6">
-                                                        <select class="default-select form-control wide btn" name="ingredient">
+                                                        <select class="default-select form-control wide btn select2-item" name="ingredient">
                                                             @foreach (var ingre in ingredients)
                                                             {
                                                                 <!option value="@ingre.Id" @(item.IngredientId == ingre.Id ? "selected" : "")>@ingre.Name</!option>
@@ -304,7 +303,6 @@
     </div>
 </div>
 @section Script{
-
     <script src="~/vendor/bootstrap-select/dist/js/bootstrap-select.min.js" type="text/javascript"></script>
     <script src="~/vendor/select2/js/select2.full.min.js" type="text/javascript"></script>
     <script src="~/js/plugins-init/select2-init.js" type="text/javascript"></script>
