--- a/Views/Admin/AddOrUpdateContest.cshtml
+++ b/Views/Admin/AddOrUpdateContest.cshtml
@@ -114,9 +114,9 @@
                             </div>
                         </div>
                           <div class="row">
-                            <span>Share photo of your recipe</span>
+                            <span>Share photo of your contest:</span>
                             <div class="mb-3 col-xl-4 col-lg-4">
-                                <input class="form-control" type="file" multiple id="formFile" name="img1" accept="image/jpeg, image/png, image/gif">
+                                <input class="form-control" type="file" id="formFile" name="img1" accept="image/jpeg, image/png, image/gif">
                             </div>                           
                         </div>
                         <div id="image-container">
