--- a/Views/Shared/Components/LatestRecipe/Default.cshtml
+++ b/Views/Shared/Components/LatestRecipe/Default.cshtml
@@ -54,17 +54,10 @@
                     </h4>
                 </div>
             </div>
-            <div class="elementor-element elementor-element-00eb634 elementor--star-style-star_unicode elementor-widget elementor-widget-star-rating" data-id="00eb634" data-element_type="widget" data-widget_type="star-rating.default">
-                <div class="elementor-widget-container">
-
-                    <div class="elementor-star-rating__wrapper">
-                        <div class="elementor-star-rating" title="4.5/5" itemtype="http://schema.org/Rating" itemscope="" itemprop="reviewRating"><i class="elementor-star-full">&#9733;</i><i class="elementor-star-full">&#9733;</i><i class="elementor-star-full">&#9733;</i><i class="elementor-star-full">&#9733;</i><i class="elementor-star-5">&#9733;</i> <span itemprop="ratingValue" class="elementor-screen-only">4.5/5</span></div>
-                    </div>
-                </div>
-            </div>
+            
             <div class="elementor-element elementor-element-58417a0 elementor-widget elementor-widget-text-editor" data-id="58417a0" data-element_type="widget" data-widget_type="text-editor.default">
                 <div class="elementor-widget-container">
-                    <p>@Model.Recipe.Description</p>
+                    <p>@Model.Recipe.Cuisines</p>
                 </div>
             </div>
         </div>
