--- a/Views/Home/SingleRecipe.cshtml
+++ b/Views/Home/SingleRecipe.cshtml
@@ -6,6 +6,7 @@
 	Layout = "~/Views/Shared/_Layoutweb.cshtml";
 	var recipe = Model;
 	var i = 0;
+	var img = recipe.Recipe.Img.Split(',');
 	
 }
 <style>
@@ -279,28 +280,14 @@
 							<link rel="stylesheet" href="~/wp-content/plugins/elementor-pro/assets/css/widget-carousel.min.css">		<div class="elementor-swiper">
 								<div class="elementor-main-swiper swiper-container">
 									<div class="swiper-wrapper">
-										<div class="swiper-slide">
-											<div class="elementor-carousel-image" style="background-image: url(/@recipe.Recipe.Img.Split(',')[0])">
-											</div>
-										</div>
-										<div class="swiper-slide">
-											<div class="elementor-carousel-image" style="background-image: url(/@recipe.Recipe.Img.Split(',')[0])">
-											</div>
-										</div>
-										<div class="swiper-slide">
-											<div class="elementor-carousel-image" style="background-image: url(/@recipe.Recipe.Img.Split(',')[0])">
-										
-											</div>
-										</div>
-										<div class="swiper-slide">
-											<a data-elementor-open-lightbox="yes" data-elementor-lightbox-slideshow="dcf05e9" data-elementor-lightbox-title="Glass of mojito" data-elementor-lightbox-description="Glass of mojito" data-e-action-hash="#elementor-action%3Aaction%3Dlightbox%26settings%3DeyJpZCI6MTAwMywidXJsIjoiaHR0cHM6XC9cL3BvaW50Lm1veGNyZWF0aXZlLmNvbVwveXVtbWFcL3dwLWNvbnRlbnRcL3VwbG9hZHNcL3NpdGVzXC8yXC8yMDIyXC8wNFwvZ2xhc3Mtb2YtbW9qaXRvLTEuanBnIiwic2xpZGVzaG93IjoiZGNmMDVlOSJ9" data-elementor-lightbox-video="">
-												<div class="elementor-carousel-image" style="background-image: url(/@recipe.Recipe.Img.Split(',')[0])">
-													<div class="elementor-custom-embed-play">
-														<svg aria-hidden="true" class="e-font-icon-svg e-eicon-play" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg"><path d="M838 162C746 71 633 25 500 25 371 25 258 71 163 162 71 254 25 367 25 500 25 633 71 746 163 837 254 929 367 979 500 979 633 979 746 933 838 837 929 746 975 633 975 500 975 367 929 254 838 162M808 192C892 279 933 379 933 500 933 621 892 725 808 808 725 892 621 938 500 938 379 938 279 896 196 808 113 725 67 621 67 500 67 379 108 279 196 192 279 108 383 62 500 62 621 62 721 108 808 192M438 392V642L642 517 438 392Z"></path></svg>					<span class="elementor-screen-only">Play</span>
-													</div>
+										@foreach (var u in img)
+										{
+											<div class="swiper-slide">
+												<div class="elementor-carousel-image" style="background-image: url(/@u)">
 												</div>
-											</a>
-										</div>
+											</div>
+										}
+										
 									</div>
 									<div class="elementor-swiper-button elementor-swiper-button-prev">
 										<svg aria-hidden="true" class="e-font-icon-svg e-eicon-chevron-left" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg"><path d="M646 125C629 125 613 133 604 142L308 442C296 454 292 471 292 487 292 504 296 521 308 533L604 854C617 867 629 875 646 875 663 875 679 871 692 858 704 846 713 829 713 812 713 796 708 779 692 767L438 487 692 225C700 217 708 204 708 187 708 171 704 154 692 142 675 129 663 125 646 125Z"></path></svg>							<span class="elementor-screen-only">Previous</span>
@@ -310,29 +297,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="elementor-swiper">
-								<div class="elementor-thumbnails-swiper swiper-container">
-									<div class="swiper-wrapper">
-										<div class="swiper-slide">
-											<div class="elementor-fit-aspect-ratio elementor-carousel-image" style="background-image: url(/@recipe.Recipe.Img.Split(',')[0])">
-											</div>
-										</div>
-										<div class="swiper-slide">
-											<div class="elementor-fit-aspect-ratio elementor-carousel-image" style="background-image: url(/@recipe.Recipe.Img.Split(',')[0])">
-											</div>
-										</div>
-										<div class="swiper-slide">
-											<div class="elementor-fit-aspect-ratio elementor-carousel-image" style="background-image: url(/@recipe.Recipe.Img.Split(',')[0])">
-											</div>
-										</div>
-										<div class="swiper-slide">
-											<div class="elementor-fit-aspect-ratio elementor-carousel-image" style="background-image: url(/@recipe.Recipe.Img.Split(',')[0])">
-											</div>
-											</a>
-										</div>
-									</div>
-								</div>
-							</div>
+							
 						</div>
 					</div>
 				</div>
@@ -457,19 +422,14 @@
 													<span class="elementor-icon-list-icon">
 														<svg aria-hidden="true" class="e-font-icon-svg e-far-clock" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"></path></svg>
 													</span>
-													<span class="elementor-icon-list-text">Total: 10 mins</span>
+													<span class="elementor-icon-list-text">Total:@recipe.Recipe.CookingTime</span>
 												</li>
-												<li class="elementor-icon-list-item">
-													<span class="elementor-icon-list-icon">
-														<svg aria-hidden="true" class="e-font-icon-svg e-far-clock" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"></path></svg>
-													</span>
-													<span class="elementor-icon-list-text">Prep: 10 mins</span>
-												</li>
+												
 												<li class="elementor-icon-list-item">
 													<span class="elementor-icon-list-icon">
 														<i aria-hidden="true" class="material-icons md-local_dining" data-md-icon="local_dining"></i>
 													</span>
-													<span class="elementor-icon-list-text">Servings: 1</span>
+													<span class="elementor-icon-list-text">Servings:@recipe.Recipe.Servings</span>
 												</li>
 											</ul>
 										</div>
@@ -550,7 +510,7 @@
 
 												.elementor-widget-image-box .elementor-image-box-description {
 													margin: 0
-												}</style><div class="elementor-image-box-wrapper"><figure class="elementor-image-box-img"><img decoding="async" fetchpriority="high" width="400" height="400" src="~/wp-content/uploads/sites/2/2022/04/img__0002_Layer-6.jpg" class="attachment-full size-full wp-image-1091" alt="" srcset="https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/img__0002_Layer-6.jpg 400w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/img__0002_Layer-6-300x300.jpg 300w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/img__0002_Layer-6-150x150.jpg 150w" sizes="(max-width: 400px) 100vw, 400px" /></figure><div class="elementor-image-box-content"><h5 class="elementor-image-box-title">Alisha Nicholson</h5><p class="elementor-image-box-description">Purus arcu netus placerat dictum suspendisse magna id semper finibus gravida porttitor</p></div></div>
+												}</style><div class="elementor-image-box-wrapper"><figure class="elementor-image-box-img"><img decoding="async" fetchpriority="high" width="400" height="400" src="/@recipe.User.Avatar" class="attachment-full size-full wp-image-1091" alt="" srcset="/@recipe.User.Avatar 400w, /@recipe.User.Avatar 300w, /@recipe.User.Avatar 150w" sizes="(max-width: 400px) 100vw, 400px" /></figure><div class="elementor-image-box-content"><h5 class="elementor-image-box-title">@recipe.User.Name</h5></div></div>
 										</div>
 									</div>
 								</div>
