--- a/Views/Shared/_Layoutweb.cshtml
+++ b/Views/Shared/_Layoutweb.cshtml
@@ -9,13 +9,14 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     @RenderSection("css", false)
+    @RenderSection("Script", required: false)
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <title>Take Of Recipe</title>
     <meta name='robots' content='max-image-preview:large' />
     <link rel="alternate" type="application/rss+xml" href="~/feed/index.html" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css"  />
     <link rel="alternate" type="application/rss+xml" Comments Feed" href="~/comments/feed/index.html" />
     <link rel="alternate" type="application/rss+xml" href="feed/index.html" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -37,6 +38,136 @@
             background: none !important;
             padding: 0 !important;
         }
+    </style>
+    
+    <style>
+        .container {
+            margin: 20px;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+        }
+
+        .info-user {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            width: 70%;
+            margin-right: 30px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .input-setting {
+            margin-top: 5px;
+            border: 1px solid #ddd;
+            padding: 10px 15px;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+
+        .input-open {
+            width: 100%;
+            cursor: auto;
+            outline: none;
+            height: 40.67px;
+        }
+
+        .input-setting:hover {
+            background-color: #f4f5f5;
+        }
+
+        .btn-save button {
+            padding: 7px 27px;
+            border: none;
+            background-color: #00b14f;
+            color: #fff;
+            border-radius: 5px;
+            cursor: pointer;
+            &:hover
+
+        {
+            opacity: 0.7;
+        }
+
+        }
+
+        /* img-infor */
+
+        .img-infor {
+            width: 30%;
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+        }
+
+        .left-infor {
+            display: flex;
+            gap: 20px;
+            border-bottom: 1px solid #ddd;
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+        }
+
+            .left-infor div img {
+                border-radius: 99%;
+            }
+
+            .left-infor div span {
+                color: #fff;
+                background-color: #00b14f;
+                padding: 4px;
+                border-radius: 99%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                width: 25px;
+                font-size: 14px;
+                margin-left: -25px;
+                cursor: pointer;
+                &:hover
+
+        {
+            background-color: #199a53;
+        }
+
+        }
+
+        .img-user {
+            display: flex;
+            align-items: flex-end;
+        }
+
+        .list ul li {
+            list-style: none;
+        }
+
+            .list ul li div {
+                display: flex;
+                align-items: center;
+                margin-bottom: 10px;
+                gap: 15px;
+            }
+
+                .list ul li div span {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #00b14f;
+                    padding: 5px;
+                    color: #fff;
+                    font-size: 10px;
+                    border-radius: 99%;
+                }
+
+                .list ul li div p {
+                    border: 1px solid #ddd;
+                    width: 100%;
+                    padding: 5px 0px 5px 10px;
+                    cursor: pointer;
+                }
     </style>
     <link rel='stylesheet' id='wp-block-library-css' href='~/wp-includes/css/dist/block-library/style.minf801.css?ver=6.3' media='all' />
     <style id='classic-theme-styles-inline-css'>
@@ -611,6 +742,150 @@
         }
                 */
     </style>
+    <style>
+        .pb-3{
+            width:100%;
+        }
+        .display{
+    display: flex;
+            align-items: flex-start;
+}
+        .container {
+            margin: 20px;
+            height: 100%;
+            display: flex;
+            margin-bottom:50px !important;
+            justify-content: center;
+        }
+
+        .info-user {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            width: 70%;
+            margin-right: 30px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .input-setting {
+            margin-top: 5px;
+            border: 1px solid #ddd;
+            padding: 10px 15px;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+
+        .input-open {
+            width: 100%;
+            cursor: auto;
+            outline: none;
+            height: 40.67px;
+        }
+
+        .input-setting:hover {
+            background-color: #f4f5f5;
+        }
+
+        .btn-save button {
+            padding: 7px 27px;
+            border: none;
+            background-color: #00b14f;
+            color: #fff;
+            border-radius: 5px;
+            cursor: pointer;
+            &:hover
+
+        {
+            opacity: 0.7;
+        }
+
+        }
+
+        /* img-infor */
+
+        .img-infor {
+            width: 30%;
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+        }
+
+        .left-infor {
+            display: flex;
+            gap: 20px;
+            border-bottom: 1px solid #ddd;
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+        }
+
+            .left-infor div img {
+                border-radius: 99%;
+            }
+
+            .left-infor div span {
+                color: #fff;
+                background-color: #00b14f;
+                padding: 4px;
+                border-radius: 99%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                width: 25px;
+                font-size: 14px;
+                margin-left: -25px;
+                cursor: pointer;
+                &:hover
+
+        {
+            background-color: #199a53;
+        }
+
+        }
+
+        .img-user {
+            display: flex;
+            align-items: flex-end;
+        }
+
+        .list ul li {
+            list-style: none;
+        }
+
+        .list ul  {
+            padding:inherit;
+        }
+
+            .list ul li div {
+                display: flex;
+                align-items: flex-start;
+                margin-bottom: 10px;
+                gap: 15px;
+            }
+
+                .list ul li div span {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #00b14f;
+                    padding: 5px;
+                    color: #fff;
+                    font-size: 15px;
+                    border-radius: 99%;
+                    width: 42px;
+                    height: 35px
+                }
+            
+
+                .list ul li div p {
+                    border: 1px solid #ddd;
+                    width: 100%;
+                    padding: 5px 0px 5px 10px;
+                    cursor: pointer;
+                }
+    </style>
 </head>
 
 <body class="archive post-type-archive post-type-archive-envato_tk_templates elementor-default elementor-template-full-width elementor-kit-8 elementor-page-83">
@@ -790,7 +1065,12 @@
                                             </li>
                                             <li><a asp-area="Identity" asp-page="/Account/Register">Đăng kí</a> </li>
 
+                                            <li>
 
+                                                <a asp-area="User" asp-page="/Home/User">
+                                                   User Profile
+                                                </a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
